--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
             name="description"
             content="Web site created using create-react-app"
         />
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
         <title>Me. Airon Herbert</title>
     </head>
     <body>
